test/Runner/errors/tests/MI/Test4.mi.js
mi("Suite", () => {
	throw new Error();
});